# SerializationSample

./: CMakeLists.txt  CMakeSettings.json
shaders/: CMakeLists.txt  app.cpp  app.h  contract.cpp  contract.h  contract_sid.i  pictures.h  serialization.h  utility.h
unittests/: CMakeLists.txt  shader_test.cpp
